Cycles + Freestyle + border render = black render #43090

Closed
opened 2015-01-01 09:34:30 +01:00 by Sorin Vinatoru · 10 comments

When border render is used in an area outside the geometry affected by freestyle, instead of transparency it renders black.

Tested versions:

System configuration: Intel Windows. Likely system independent.

Attached a simple example. Steps to reproduce:

  • open the file, hit render. you'll see the bug in action
  • uncheck the "border" checkbox, hit render. You'll see the desired outcome

Thanks!

When border render is used in an area outside the geometry affected by freestyle, instead of transparency it renders black. Tested versions: - 2.72a 73f5a41 - 2.73 c24b694 System configuration: Intel Windows. Likely system independent. Attached a simple example. Steps to reproduce: - open the file, hit render. you'll see the bug in action - uncheck the "border" checkbox, hit render. You'll see the desired outcome Thanks!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sorinv

Added subscriber: @sorinv

#43281 was marked as duplicate of this issue

#43281 was marked as duplicate of this issue
Author
[Freestyle-border-BlackRender.blend](https://archive.blender.org/developer/F134542/Freestyle-border-BlackRender.blend)
Tamito Kajiyama was assigned by Bastien Montagne 2015-01-01 22:04:15 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Tamito, not sure we consider this a bug or a TODO? Your call. :)

Tamito, not sure we consider this a bug or a TODO? Your call. :)

This issue was referenced by c9e5d9226b

This issue was referenced by c9e5d9226b8c89f0081f8191f868c23e595b0c3f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c9e5d9226b.

Closed by commit c9e5d9226b.

Added subscribers: @flokkievids, @plasmasolutions, @kjym3

Added subscribers: @flokkievids, @plasmasolutions, @kjym3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43090
No description provided.